Profile Table spacing and Profile Info form responsive fix.

--- a/src/views/profile/styles.module.css
+++ b/src/views/profile/styles.module.css
@@ -12,6 +12,14 @@ section:not(section:first-of-type) {
   border-top: 1px solid rgb(0, 0, 0, 0.3);
 }
 
+@media screen and (max-width: 800px) {
+  section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
 p,
 h2,
 h3,
@@ -80,6 +88,21 @@ h4 {
 .profileInfo .form fieldset:not(fieldset:last-child) {
   display: flex;
   align-items: center;
+}
+
+@media screen and (max-width: 526px) {
+  .profileInfo .form fieldset:not(fieldset:last-child) {
+    flex-wrap: wrap;
+  }
+
+  .profileInfo .form fieldset label {
+    margin-bottom: 0.5rem;
+  }
+
+  .profileInfo .form fieldset:nth-child(3) select {
+    margin-bottom: 1rem;
+    margin-right: 0;
+  }
 }
 
 .profileInfo .form fieldset:nth-of-type(3) {
@@ -237,20 +260,12 @@ table tbody tr td span {
 
   table tbody tr td {
     display: grid;
-    grid-template-columns: 13ch auto;
+    grid-template-columns: 8ch auto;
     font-size: 0.875rem;
     max-width: 100%;
   }
   table tbody tr td span {
     display: inline-block;
     font-weight: 600;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  section {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
   }
 }
